--- a/MainPage/templates/index.html
+++ b/MainPage/templates/index.html
@@ -20,7 +20,7 @@
     <body>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <div style="text-align:center;border;">
-            <img src="http://chuantu.biz/t5/28/1471391067x3688412776.png" title="Binoocle">
+            <img src="http://i1.piimg.com/1949/be3f124f42e3f66c.png" title="Binoocle">
             <form method="post" action="">
             <p>
                 <input type="text" name="title" id="recid" />
