--- a/MainPage/templates/main.html
+++ b/MainPage/templates/main.html
@@ -25,7 +25,7 @@ $def with (lister)
     </head>
     <body>
 
-            <img src="http://chuantu.biz/t5/28/1471391067x3688412776.png" width="140" height="35" title="Binoocle" style="float:left;">
+            <img src="http://i1.piimg.com/1949/be3f124f42e3f66c.png" width="140" height="35" title="Binoocle" style="float:left;">
 
             <form method="post" action="">
                 <input type="text" name="title" id="recid" />
