add time attribute

--- a/MainPage/templates/index.html
+++ b/MainPage/templates/index.html
@@ -20,11 +20,11 @@
     <body>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <div style="text-align:center;border;">
-            <img src="http://i1.piimg.com/1949/be3f124f42e3f66c.png" title="Binoocle">
+            <img src="http://i1.piimg.com/1949/be3f124f42e3f66c.png" width="280" height="70" title="Binoocle">
             <form method="post" action="">
             <p>
                 <input type="text" name="title" id="recid" />
-                <input type="submit" value="Binoocle！" id="subid"/>
+                <input type="submit" value="  Binoocle！  " id="subid"/>
             </p>
             </form>
         </div>
